# PixelRay

./: .gitignore  CMakeLists.txt  color.h  geometry.h  graphics.h  main.cpp  render.h  threadpool.h
include/: graphics.h  pixelray.h  render.h  threadpool.h  window.h
src/: pixelray.cpp  threadpool.hpp  window.cpp
